--- a/shopping/package.json
+++ b/shopping/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@reduxjs/toolkit": "^2.2.6",
+    "firebase": "^10.12.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.1",
+    "react-tabs": "^6.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
