--- a/shopping/package.json
+++ b/shopping/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
-    "react-tabs": "^6.0.2"
+    "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
